Ajout de 3 personnages + médaille

--- a/en/index.html
+++ b/en/index.html
@@ -91,18 +91,19 @@
         <img src="../other/achievements/100-commits.png" height="200" title="100 commits on GitHub!">
         <img src=../other/achievements/traduction.png height=200 title="Website's translation">
         <img src=../other/achievements/100-membres.png height=200 title="100 members in the army! 🎊">
+        <img src=../other/achievements/20-contributeurs.png height=200 title="20 artists!">
       </p>
       <div class="spaceline"></div>
       <h2 id="armée">🔪 The army</h2>
-      <p align="center">Total number of members: <b class=ref>112</b></p>
+      <p align="center">Total number of members: <b class=ref>115</b></p>
       <p align="center">Clicking on the <b class="ref">golden</b> links will send you to
         the <code>🌟 Acknowledgements</code>.</p>
       <table class="members-table" align=center>
         <thead>
           <tr>
-            <th>Name</th>
+            <th>Nom</th>
             <th>Image</th>
-            <th>Link</th>
+            <th>Lien</th>
           </tr>
         </thead>
         <tbody>
@@ -308,6 +309,13 @@
               <p><img src=../files/cosmonus.jpeg></p>
             </td>
             <td><a href="../files/cosmonus.jpeg"><span class="material-icons-round">link</span></a></td>
+          </tr>
+          <tr>
+            <td><a class=ref href=#remerciements>crashus</a></td>
+            <td>
+              <p><img src="../files/crashus.jpeg"></p>
+            </td>
+            <td><a href="../files/crashus.jpeg"><span class="material-icons-round">link</span></a></td>
           </tr>
           <tr>
             <td><a class=ref href=#remerciements>cuistus</a></td>
@@ -675,6 +683,13 @@
             <td><a href="../files/poulus.jpeg"><span class="material-icons-round">link</span></a></td>
           </tr>
           <tr>
+            <td><a class=ref href=#remerciements>questionus</a></td>
+            <td>
+              <p><img src="../files/questionus.jpeg"></p>
+            </td>
+            <td><a href="../files/questionus.jpeg"><span class="material-icons-round">link</span></a></td>
+          </tr>
+          <tr>
             <td><a class=ref href=#remerciements>racaillus</a></td>
             <td>
               <p><img src=../files/racaillus.jpeg></p>
@@ -892,6 +907,13 @@
             </td>
             <td><a href="../files/yoyosus.jpeg"><span class="material-icons-round">link</span></a></td>
           </tr>
+          <tr>
+            <td><a class=ref href=#remerciements>zorus</a></td>
+            <td>
+              <p><img src="../files/zorus.jpeg"></p>
+            </td>
+            <td><a href="../files/zorus.jpeg"><span class="material-icons-round">link</span></a></td>
+          </tr>
         </tbody>
       </table>
       <div class="spaceline"></div>
@@ -914,7 +936,7 @@
       <p align="center"><a href="personnage.html">The guide: How to create a character?</a></p>
       <div class="spaceline"></div>
       <h2 id="remerciements">🌟 Acknowledgements</h2>
-      <p>Thanks to the <b class="ref">19</b> artists:</p>
+      <p>Thanks to the <b class="ref">20</b> artists:</p>
       <ul class="remerciements">
         <li><b class="ref2">💎 Apix</b> (me) for all the characters with the white name,</li>
         <li><b class="ref2">💎 Chus</b> who, in addition to being the person I had the idea with, created
@@ -926,34 +948,34 @@
           <code>infirmus</code>, <code>laserus</code>, <code>livrus</code>, <code>michael-jacksus</code>,
           <code>musclus</code>, <code>naturus</code>, <code>ninjsus</code>, <code>perdus</code>, <code>piratus</code>,
           <code>poulus</code>, <code>seinsus</code>, <code>the-creatorus</code>, <code>thugus</code> and
-          <code>vampirus</code>
+          <code>vampirus</code>,
         </li>
         <li><b class="ref">👑 XNinja</b> for <code>applus</code>, <code>asus</code>, <code>diamonda</code>,
           <code>gameus</code>, <code>marius</code>, <code>pacmanus</code>
           <code>pokebollus</code>,
           <code>stickmus</code>, <code>uranus</code> et
-          <code>wizardus <a href=https://github.com/Apix0n/Armus/issues/7 target="_blank">#7</a></code>
+          <code>wizardus <a href=https://github.com/Apix0n/Armus/issues/7 target="_blank">#7</a></code>,
         </li>
         <li><b>Ilian</b> for <code>drogueus</code>, <code>killus</code>, <code>mysterus</code>, <code>naturus</code>,
-          <code>robotus</code>, <code>sofianus</code>, <code>spidermanus</code> and <code>vegetus</code>
+          <code>robotus</code>, <code>sofianus</code>, <code>spidermanus</code> and <code>vegetus</code>,
         </li>
-        <li><b>Jujudubat7</b> for <code>chaplinus</code></li>
-        <li><b>EVIL UO</b> for <code>luffus</code> and <code>nymarus</code></li>
-        <li><b>Camicase</b> for <code>helicoptus</code> and <code>sleepus</code></li>
+        <li><b>Jujudubat7</b> for <code>chaplinus</code>,</li>
+        <li><b>EVIL UO</b> for <code>luffus</code> and <code>nymarus</code>,</li>
+        <li><b>Camicase</b> for <code>helicoptus</code> and <code>sleepus</code>,</li>
         <li><b class="ref">👑 Aliko</b> for <code>babacus</code>, <code>coca-colus</code>, <code>demonus</code>,
           <code>dora</code>, <code>eclairus</code>, <code>grogus</code>, <code>icecreamus</code>, <code>intellus</code>,
           <code>japnessa</code>,
           <code>nutellus</code>, <code>peppus</code>, <code>racaillus</code>, <code>rockus</code>,
           <code>tchoupius</code>,
-          <code>tornadus</code>, <code>xdsus</code> and <code>yoyosus</code>
+          <code>tornadus</code>, <code>xdsus</code> and <code>yoyosus</code>,
         </li>
-        <li><b>Lili</b> for <code>amosus</code>, <code>bakacutea</code> and <code>turkus</code></li>
-        <li><b>Petiteprincesse</b> for <code>pikachus</code> and <code>rainbowus</code></li>
-        <li><b>Apyzzelos</b> for <code>hamburgus</code></li>
-        <li><b>Samilogosy</b> for <code>capturus</code> and <code>shrekus</code></li>
-        <li><b>K.Y</b> for <code>theamosus78</code></li>
-        <li><b>ID_CLAS</b> for <code>arabus</code></li>
-        <li><b>ceriban176</b> for <code>roitus</code></li>
+        <li><b>Lili</b> for <code>amosus</code>, <code>bakacutea</code> and <code>turkus</code>,</li>
+        <li><b>Petiteprincesse</b> for <code>pikachus</code> and <code>rainbowus</code>,</li>
+        <li><b>Apyzzelos</b> for <code>hamburgus</code>,</li>
+        <li><b>Samilogosy</b> for <code>capturus</code> and <code>shrekus</code>,</li>
+        <li><b>K.Y</b> for <code>theamosus78</code>,</li>
+        <li><b>ID_CLAS</b> for <code>arabus</code>,</li>
+        <li><b>ceriban176</b> for <code>roitus</code>,</li>
         <li><b class="ref">👑 Nissou</b> for
           <code>abatus <a href=https://github.com/Apix0n/Armus/issues/17 target="_blank">#17</a></code>,
           <code>angelus <a href=https://github.com/Apix0n/Armus/issues/24 target="_blank">#24</a></code>,
@@ -965,11 +987,12 @@
           <code>papillus <a href=https://github.com/Apix0n/Armus/issues/25 target="_blank">#25</a></code>,
           <code>superherus <a href=https://github.com/Apix0n/Armus/issues/26 target="_blank">#26</a></code>,
           <code>voitus <a href="https://github.com/Apix0n/Armus/issues/29" target="_blank">#29</a></code> and
-          <code>werbrus <a href=https://github.com/Apix0n/Armus/issues/20 target="_blank">#20</a></code>
+          <code>werbrus <a href=https://github.com/Apix0n/Armus/issues/20 target="_blank">#20</a></code>,
         </li>
-        <li><b>Goku</b> for <code>maya</code></li>
-        <li><b>Abat</b> for <code>paintus</code></li>
-        <li><b>Ducky duck</b> for <code>ahmonzbobus</code></li>
+        <li><b>Goku</b> for <code>maya</code> and <code>zorus</code>,</li>
+        <li><b>Abat</b> for <code>paintus</code>,</li>
+        <li><b>Ducky duck</b> for <code>ahmonzbobus</code>,</li>
+        <li><b>Kookanonym</b> for <code>crashus</code> and <code>questionus</code>,</li>
       </ul>
       <p>Caption:</p>
       <ul>
