--- a/fr/index.html
+++ b/fr/index.html
@@ -90,10 +90,11 @@
         <img src="../other/achievements/100-commits.png" height="200" title="100 commits sur GitHub!">
         <img src=../other/achievements/traduction.png height=200 title="Traduction du site">
         <img src=../other/achievements/100-membres.png height=200 title="100 membres dans l'armée! 🎊">
+        <img src=../other/achievements/20-contributeurs.png height=200 title="20 artistes!">
       </p>
       <div class="spaceline"></div>
       <h2 id="armée">🔪 L'armée</h2>
-      <p align="center">Nombre total de membres: <b class="ref">112</b></p>
+      <p align="center">Nombre total de membres: <b class="ref">115</b></p>
       <p align="center">Cliquer sur les noms en <b class="ref">or</b> vous enverra
         aux <code>🌟 Remerciements</code>.</p>
       <table class="members-table" align=center>
@@ -307,6 +308,13 @@
               <p><img src=../files/cosmonus.jpeg></p>
             </td>
             <td><a href="../files/cosmonus.jpeg"><span class="material-icons-round">link</span></a></td>
+          </tr>
+          <tr>
+            <td><a class=ref href=#remerciements>crashus</a></td>
+            <td>
+              <p><img src="../files/crashus.jpeg"></p>
+            </td>
+            <td><a href="../files/crashus.jpeg"><span class="material-icons-round">link</span></a></td>
           </tr>
           <tr>
             <td><a class=ref href=#remerciements>cuistus</a></td>
@@ -672,6 +680,12 @@
               <p><img src=../files/poulus.jpeg></p>
             </td>
             <td><a href="../files/poulus.jpeg"><span class="material-icons-round">link</span></a></td>
+          </tr><tr>
+            <td><a class=ref href=#remerciements>questionus</a></td>
+            <td>
+              <p><img src="../files/questionus.jpeg"></p>
+            </td>
+            <td><a href="../files/questionus.jpeg"><span class="material-icons-round">link</span></a></td>
           </tr>
           <tr>
             <td><a class=ref href=#remerciements>racaillus</a></td>
@@ -891,6 +905,13 @@
             </td>
             <td><a href="../files/yoyosus.jpeg"><span class="material-icons-round">link</span></a></td>
           </tr>
+          <tr>
+            <td><a class=ref href=#remerciements>zorus</a></td>
+            <td>
+              <p><img src="../files/zorus.jpeg"></p>
+            </td>
+            <td><a href="../files/zorus.jpeg"><span class="material-icons-round">link</span></a></td>
+          </tr>
         </tbody>
       </table>
       <div class="spaceline"></div>
@@ -913,7 +934,7 @@
       <p align="center"><a href="personnage.html">Le guide: Comment créer un personnage?</a></p>
       <div class="spaceline"></div>
       <h2 id="remerciements">🌟 Remerciements</h2>
-      <p>Merci aux <b class="ref">19</b> artistes:</p>
+      <p>Merci aux <b class="ref">20</b> artistes:</p>
       <ul class="remerciements">
         <li><b class="ref2">💎 Apix</b> (moi) pour tous les personnages avec le nom blanc,</li>
         <li><b class="ref2">💎 Chus</b> qui, en plus d’être la personne avec laquelle j’ai eu l’idée, a créé
@@ -925,34 +946,34 @@
           <code>infirmus</code>, <code>laserus</code>, <code>livrus</code>, <code>michael-jacksus</code>,
           <code>musclus</code>, <code>naturus</code>, <code>ninjsus</code>, <code>perdus</code>, <code>piratus</code>,
           <code>poulus</code>, <code>seinsus</code>, <code>the-creatorus</code>, <code>thugus</code> et
-          <code>vampirus</code>
+          <code>vampirus</code>,
         </li>
         <li><b class="ref">👑 XNinja</b> pour <code>applus</code>, <code>asus</code>, <code>diamonda</code>,
           <code>gameus</code>, <code>marius</code>, <code>pacmanus</code>
           <code>pokebollus</code>,
           <code>stickmus</code>, <code>uranus</code> et
-          <code>wizardus <a href=https://github.com/Apix0n/Armus/issues/7 target="_blank">#7</a></code>
+          <code>wizardus <a href=https://github.com/Apix0n/Armus/issues/7 target="_blank">#7</a></code>,
         </li>
         <li><b>Ilian</b> pour <code>drogueus</code>, <code>killus</code>, <code>mysterus</code>, <code>naturus</code>,
-          <code>robotus</code>, <code>sofianus</code>, <code>spidermanus</code> et <code>vegetus</code>
+          <code>robotus</code>, <code>sofianus</code>, <code>spidermanus</code> et <code>vegetus</code>,
         </li>
-        <li><b>Jujudubat7</b> pour <code>chaplinus</code></li>
-        <li><b>EVIL UO</b> pour <code>luffus</code> et <code>nymarus</code></li>
-        <li><b>Camicase</b> pour <code>helicoptus</code> et <code>sleepus</code></li>
+        <li><b>Jujudubat7</b> pour <code>chaplinus</code>,</li>
+        <li><b>EVIL UO</b> pour <code>luffus</code> et <code>nymarus</code>,</li>
+        <li><b>Camicase</b> pour <code>helicoptus</code> et <code>sleepus</code>,</li>
         <li><b class="ref">👑 Aliko</b> pour <code>babacus</code>, <code>coca-colus</code>, <code>demonus</code>,
           <code>dora</code>, <code>eclairus</code>, <code>grogus</code>, <code>icecreamus</code>, <code>intellus</code>,
           <code>japnessa</code>,
           <code>nutellus</code>, <code>peppus</code>, <code>racaillus</code>, <code>rockus</code>,
           <code>tchoupius</code>,
-          <code>tornadus</code>, <code>xdsus</code> et <code>yoyosus</code>
+          <code>tornadus</code>, <code>xdsus</code> et <code>yoyosus</code>,
         </li>
-        <li><b>Lili</b> pour <code>amosus</code>, <code>bakacutea</code> et <code>turkus</code></li>
-        <li><b>Petiteprincesse</b> pour <code>pikachus</code> et <code>rainbowus</code></li>
-        <li><b>Apyzzelos</b> pour <code>hamburgus</code></li>
-        <li><b>Samilogosy</b> pour <code>capturus</code> et <code>shrekus</code></li>
-        <li><b>K.Y</b> pour <code>theamosus78</code></li>
-        <li><b>ID_CLAS</b> pour <code>arabus</code></li>
-        <li><b>ceriban176</b> pour <code>roitus</code></li>
+        <li><b>Lili</b> pour <code>amosus</code>, <code>bakacutea</code> et <code>turkus</code>,</li>
+        <li><b>Petiteprincesse</b> pour <code>pikachus</code> et <code>rainbowus</code>,</li>
+        <li><b>Apyzzelos</b> pour <code>hamburgus</code>,</li>
+        <li><b>Samilogosy</b> pour <code>capturus</code> et <code>shrekus</code>,</li>
+        <li><b>K.Y</b> pour <code>theamosus78</code>,</li>
+        <li><b>ID_CLAS</b> pour <code>arabus</code>,</li>
+        <li><b>ceriban176</b> pour <code>roitus</code>,</li>
         <li><b class="ref">👑 Nissou</b> pour
           <code>abatus <a href=https://github.com/Apix0n/Armus/issues/17 target="_blank">#17</a></code>,
           <code>angelus <a href=https://github.com/Apix0n/Armus/issues/24 target="_blank">#24</a></code>,
@@ -964,11 +985,12 @@
           <code>papillus <a href=https://github.com/Apix0n/Armus/issues/25 target="_blank">#25</a></code>,
           <code>superherus <a href=https://github.com/Apix0n/Armus/issues/26 target="_blank">#26</a></code>,
           <code>voitus <a href="https://github.com/Apix0n/Armus/issues/29" target="_blank">#29</a></code> et
-          <code>werbrus <a href=https://github.com/Apix0n/Armus/issues/20 target="_blank">#20</a></code>
+          <code>werbrus <a href=https://github.com/Apix0n/Armus/issues/20 target="_blank">#20</a></code>,
         </li>
-        <li><b>Goku</b> pour <code>maya</code></li>
-        <li><b>Abat</b> pour <code>paintus</code></li>
-        <li><b>Ducky duck</b> pour <code>ahmonzbobus</code></li>
+        <li><b>Goku</b> pour <code>maya</code> et <code>zorus</code>,</li>
+        <li><b>Abat</b> pour <code>paintus</code>,</li>
+        <li><b>Ducky duck</b> pour <code>ahmonzbobus</code>,</li>
+        <li><b>Kookanonym</b> pour <code>crashus</code> et <code>questionus</code>,</li>
       </ul>
       <p>Légende:</p>
       <ul>
