--- a/tr/index.html
+++ b/tr/index.html
@@ -90,17 +90,18 @@
         <img src="../other/achievements/100-commits.png" height="200" title="GitHub'da 100 commits!">
         <img src=../other/achievements/traduction.png height=200 title="Web sitenin çevirisi">
         <img src=../other/achievements/100-membres.png height=200 title="Orduda 100 üye! 🎊">
+        <img src=../other/achievements/20-contributeurs.png height=200 title="20 sanatçılar!">
       </p>
       <div class="spaceline"></div>
       <h2 id="armée">🔪 Ordu</h2>
-      <p align="center">Toplam üye sayısı: <b class="ref">112</b></p>
+      <p align="center">Toplam üye sayısı: <b class="ref">115</b></p>
       <p align="center"><b class="ref">Altın</b> olan isimlere tıklayarak sizi <code>⭐ Teşekkürler</code> bölümüne yönledirileceksiniz.</p>
       <table class="members-table" align=center>
         <thead>
           <tr>
-            <th>Ad</th>
-            <th>Resim</th>
-            <th title="Bağlantı" class="dotlined">Bağ.</th>
+            <th>Nom</th>
+            <th>Image</th>
+            <th>Lien</th>
           </tr>
         </thead>
         <tbody>
@@ -306,6 +307,13 @@
               <p><img src=../files/cosmonus.jpeg></p>
             </td>
             <td><a href="../files/cosmonus.jpeg"><span class="material-icons-round">link</span></a></td>
+          </tr>
+          <tr>
+            <td><a class=ref href=#remerciements>crashus</a></td>
+            <td>
+              <p><img src="../files/crashus.jpeg"></p>
+            </td>
+            <td><a href="../files/crashus.jpeg"><span class="material-icons-round">link</span></a></td>
           </tr>
           <tr>
             <td><a class=ref href=#remerciements>cuistus</a></td>
@@ -673,6 +681,13 @@
             <td><a href="../files/poulus.jpeg"><span class="material-icons-round">link</span></a></td>
           </tr>
           <tr>
+            <td><a class=ref href=#remerciements>questionus</a></td>
+            <td>
+              <p><img src="../files/questionus.jpeg"></p>
+            </td>
+            <td><a href="../files/questionus.jpeg"><span class="material-icons-round">link</span></a></td>
+          </tr>
+          <tr>
             <td><a class=ref href=#remerciements>racaillus</a></td>
             <td>
               <p><img src=../files/racaillus.jpeg></p>
@@ -890,6 +905,13 @@
             </td>
             <td><a href="../files/yoyosus.jpeg"><span class="material-icons-round">link</span></a></td>
           </tr>
+          <tr>
+            <td><a class=ref href=#remerciements>zorus</a></td>
+            <td>
+              <p><img src="../files/zorus.jpeg"></p>
+            </td>
+            <td><a href="../files/zorus.jpeg"><span class="material-icons-round">link</span></a></td>
+          </tr>
         </tbody>
       </table>
       <div class="spaceline"></div>
@@ -910,7 +932,7 @@
       <p align="center"><a href="../en/personnage.html">Rehber: bir karakter nasıl oluşturulur?</a> (İngilizce)</p>
       <div class="spaceline"></div>
       <h2 id="remerciements">🌟 Teșekkürler</h2>
-      <p>Sanatçılara teşekkürler:</p>
+      <p><b class="ref">20</b> sanatçılara teşekkürler:</p>
       <ul class="remerciements">
         <li><b class="ref2">💎 Apix</b> (ben) beyaz adını olan tüm karakterler için,</li>
         <li><b class="ref2">💎 Chus</b>, fikre sahip olduğum kiși olmanın yanı sıra ve
@@ -963,9 +985,10 @@
           <code>voitus <a href="https://github.com/Apix0n/Armus/issues/29" target="_blank">#29</a></code> ve
           <code>werbrus <a href=https://github.com/Apix0n/Armus/issues/20 target="_blank">#20</a></code> için,
         </li>
-        <li><b>Goku</b> <code>maya</code> için,</li>
+        <li><b>Goku</b> <code>maya</code> ve <code>zorus</code> için,</li>
         <li><b>Abat</b> <code>paintus</code> için,</li>
         <li><b>Ducky duck</b> <code>ahmonzbobus</code> için,</li>
+        <li><b>Kookanonym</b> <code>crashus</code> ve <code>questionus</code> için,</li>
       </ul>
       <p>Açıklaması:</p>
       <ul>
