fix thead for en, tr

--- a/en/index.html
+++ b/en/index.html
@@ -101,9 +101,9 @@
       <table class="members-table" align=center>
         <thead>
           <tr>
-            <th>Nom</th>
+            <th>Name</th>
             <th>Image</th>
-            <th>Lien</th>
+            <th>Link</th>
           </tr>
         </thead>
         <tbody>
