--- a/tr/index.html
+++ b/tr/index.html
@@ -99,9 +99,9 @@
       <table class="members-table" align=center>
         <thead>
           <tr>
-            <th>Nom</th>
-            <th>Image</th>
-            <th>Lien</th>
+            <th>Ad</th>
+            <th>Resim</th>
+            <th title="Bağlantı" class="dotlined">Bağ.</th>
           </tr>
         </thead>
         <tbody>
