Added noscript action

--- a/fr/index.html
+++ b/fr/index.html
@@ -37,6 +37,9 @@
     </section>
     <section id="two">
       <div class="langpick goldlink"><span class="used">🇫🇷</span> • <a href="../en" >🇬🇧</a> • <a href="../tr">🇹🇷</a></div>
+      <noscript>
+        <h4 align="center"c><span class="material-icons-round normalfontsize">info</span> Certains emojis peuvent ne pas être disponibles. Pour tous les voir, activez JavaScript.</p>
+      </noscript>
       <p align=center class="line-image">
         <img src="../other/Armus-line.jpg">
       </p>
