--- a/tr/index.html
+++ b/tr/index.html
@@ -38,6 +38,9 @@
     </section>
     <section id="two">
       <div class="langpick goldlink"><a href="../fr">🇫🇷</a> • <a href="../en">🇬🇧</a> • <span class="used">🇹🇷</span></div>
+      <noscript>
+      <h4 align="center"><span class="material-icons-round normalfontsize">info</span> Bazı emojiler gösterilmeyebilir. Hepsini göstermek için JavaScript etkinleştirin.</p>
+      </noscript>
       <p align=center class="line-image">
         <img src="../other/Armus-line.jpg">
       </p>
