New characters from Apix

--- a/fr/index.html
+++ b/fr/index.html
@@ -38,7 +38,7 @@
     <section id="two">
       <div class="langpick goldlink"><span class="used">🇫🇷</span> • <a href="../en" >🇬🇧</a> • <a href="../tr">🇹🇷</a></div>
       <noscript>
-        <h4 align="center"c><span class="material-icons-round normalfontsize">info</span> Certains emojis peuvent ne pas être disponibles. Pour tous les voir, activez JavaScript.</p>
+        <h4 align="center"><span class="material-icons-round normalfontsize">info</span> Certains emojis peuvent ne pas être disponibles. Pour tous les voir, activez JavaScript.</p>
       </noscript>
       <p align=center class="line-image">
         <img src="../other/Armus-line.jpg">
@@ -97,7 +97,7 @@
       </p>
       <div class="spaceline"></div>
       <h2 id="armée">🔪 L'armée</h2>
-      <p align="center">Nombre total de membres: <b class="ref">115</b></p>
+      <p align="center">Nombre total de membres: <b class="ref">117</b></p>
       <p align="center">Cliquer sur les noms en <b class="ref">or</b> vous enverra
         aux <code>🌟 Remerciements</code>.</p>
       <table class="members-table" align=center>
@@ -425,6 +425,13 @@
             <td><a href="../files/geometrus.jpeg"><span class="material-icons-round">link</span></a></td>
           </tr>
           <tr>
+            <td>glasus</td>
+            <td>
+              <p><img src="../files/glasus.jpeg"></p>
+            </td>
+            <td><a href="../files/glasus.jpeg"><span class="material-icons-round">link</span></a></td>
+          </tr>
+          <tr>
             <td><a class=ref href=#remerciements>goblinus</a></td>
             <td>
               <p><img src=../files/goblinus.jpeg></p>
@@ -676,6 +683,13 @@
               <p><img src=../files/poopus.jpeg></p>
             </td>
             <td><a href="../files/poopus.jpeg"><span class="material-icons-round">link</span></a></td>
+          </tr>
+          <tr>
+            <td>potatus</td>
+            <td>
+              <p><img src="../files/potatus.jpeg"></p>
+            </td>
+            <td><a href="../files/potatus.jpeg"><span class="material-icons-round">link</span></a></td>
           </tr>
           <tr>
             <td><a class=ref href=#remerciements>poulus</a></td>
