--- a/tr/index.html
+++ b/tr/index.html
@@ -55,7 +55,7 @@
             <td><a href="#informations">📝 Bilgiler</a></td>
           </tr>
           <tr>
-            <td><a href="#médailles">🏅 Madalyalar</a< /td>
+            <td><a href="#médailles">🏅 Madalyalar</a></td>
           </tr>
           <tr>
             <td><a href="#armée">🔪 Ordu</a></td>
@@ -97,7 +97,7 @@
       </p>
       <div class="spaceline"></div>
       <h2 id="armée">🔪 Ordu</h2>
-      <p align="center">Toplam üye sayısı: <b class="ref">115</b></p>
+      <p align="center">Toplam üye sayısı: <b class="ref">117</b></p>
       <p align="center"><b class="ref">Altın</b> olan isimlere tıklayarak sizi <code>⭐ Teşekkürler</code> bölümüne yönledirileceksiniz.</p>
       <table class="members-table" align=center>
         <thead>
@@ -424,6 +424,13 @@
             <td><a href="../files/geometrus.jpeg"><span class="material-icons-round">link</span></a></td>
           </tr>
           <tr>
+            <td>glasus</td>
+            <td>
+              <p><img src="../files/glasus.jpeg"></p>
+            </td>
+            <td><a href="../files/glasus.jpeg"><span class="material-icons-round">link</span></a></td>
+          </tr>
+          <tr>
             <td><a class=ref href=#remerciements>goblinus</a></td>
             <td>
               <p><img src=../files/goblinus.jpeg></p>
@@ -675,6 +682,13 @@
               <p><img src=../files/poopus.jpeg></p>
             </td>
             <td><a href="../files/poopus.jpeg"><span class="material-icons-round">link</span></a></td>
+          </tr>
+          <tr>
+            <td>potatus</td>
+            <td>
+              <p><img src="../files/potatus.jpeg"></p>
+            </td>
+            <td><a href="../files/potatus.jpeg"><span class="material-icons-round">link</span></a></td>
           </tr>
           <tr>
             <td><a class=ref href=#remerciements>poulus</a></td>
