--- a/en/index.html
+++ b/en/index.html
@@ -54,7 +54,7 @@
             <td><a href="#informations">📝 Informations</a></td>
           </tr>
           <tr>
-            <td><a href="#médailles">🏅 Medals</a< /td>
+            <td><a href="#médailles">🏅 Medals</a></td>
           </tr>
           <tr>
             <td><a href="#armée">🔪 The army</a></td>
@@ -98,7 +98,7 @@
       </p>
       <div class="spaceline"></div>
       <h2 id="armée">🔪 The army</h2>
-      <p align="center">Total number of members: <b class=ref>115</b></p>
+      <p align="center">Total number of members: <b class=ref>117</b></p>
       <p align="center">Clicking on the <b class="ref">golden</b> links will send you to
         the <code>🌟 Acknowledgements</code>.</p>
       <table class="members-table" align=center>
@@ -426,6 +426,13 @@
             <td><a href="../files/geometrus.jpeg"><span class="material-icons-round">link</span></a></td>
           </tr>
           <tr>
+            <td>glasus</td>
+            <td>
+              <p><img src="../files/glasus.jpeg"></p>
+            </td>
+            <td><a href="../files/glasus.jpeg"><span class="material-icons-round">link</span></a></td>
+          </tr>
+          <tr>
             <td><a class=ref href=#remerciements>goblinus</a></td>
             <td>
               <p><img src=../files/goblinus.jpeg></p>
@@ -677,6 +684,13 @@
               <p><img src=../files/poopus.jpeg></p>
             </td>
             <td><a href="../files/poopus.jpeg"><span class="material-icons-round">link</span></a></td>
+          </tr>
+          <tr>
+            <td>potatus</td>
+            <td>
+              <p><img src="../files/potatus.jpeg"></p>
+            </td>
+            <td><a href="../files/potatus.jpeg"><span class="material-icons-round">link</span></a></td>
           </tr>
           <tr>
             <td><a class=ref href=#remerciements>poulus</a></td>
