fix some code errors

--- a/en/index.html
+++ b/en/index.html
@@ -38,7 +38,8 @@
     <section id="two">
       <div class="langpick goldlink"><a href="../fr">🇫🇷</a> • <span class="used">🇬🇧</span> • <a href="../tr">🇹🇷</a></div>
       <noscript>
-        <h4 align="center"><span class="material-icons-round normalfontsize">info</span> Some emojis may not be available. To see them all, enable JavaScript.</p>
+        <h4 align="center"><span class="material-icons-round normalfontsize">info</span> Some emojis may not be
+          available. To see them all, enable JavaScript.</h4>
       </noscript>
       <p align=center class="line-image">
         <img src="../other/Armus-line.jpg">
