--- a/fr/index.html
+++ b/fr/index.html
@@ -36,9 +36,10 @@
       </a>
     </section>
     <section id="two">
-      <div class="langpick goldlink"><span class="used">🇫🇷</span> • <a href="../en" >🇬🇧</a> • <a href="../tr">🇹🇷</a></div>
+      <div class="langpick goldlink"><span class="used">🇫🇷</span> • <a href="../en">🇬🇧</a> • <a href="../tr">🇹🇷</a></div>
       <noscript>
-        <h4 align="center"><span class="material-icons-round normalfontsize">info</span> Certains emojis peuvent ne pas être disponibles. Pour tous les voir, activez JavaScript.</p>
+        <h4 align="center"><span class="material-icons-round normalfontsize">info</span> Certains emojis peuvent ne pas
+          être disponibles. Pour tous les voir, activez JavaScript.</h4>
       </noscript>
       <p align=center class="line-image">
         <img src="../other/Armus-line.jpg">
@@ -54,7 +55,7 @@
             <td><a href="#informations">📝 Informations</a></td>
           </tr>
           <tr>
-            <td><a href="#médailles">🏅 Médailles</a< /td>
+            <td><a href="#médailles">🏅 Médailles</a></td>
           </tr>
           <tr>
             <td><a href="#armée">🔪 L'armée</a></td>
@@ -697,7 +698,8 @@
               <p><img src=../files/poulus.jpeg></p>
             </td>
             <td><a href="../files/poulus.jpeg"><span class="material-icons-round">link</span></a></td>
-          </tr><tr>
+          </tr>
+          <tr>
             <td><a class=ref href=#remerciements>questionus</a></td>
             <td>
               <p><img src="../files/questionus.jpeg"></p>
