--- a/tr/index.html
+++ b/tr/index.html
@@ -4,8 +4,7 @@
   <head>
     <title>Armus TR</title>
     <meta charset="utf-8">
-    <meta name="description"
-          content="Armus - Tüm özel amogusları bir orduya organize etmek için bir GitHub projesi">
+    <meta name="description" content="Armus - Tüm özel amogusları bir orduya organize etmek için bir GitHub projesi">
     <link rel="stylesheet" href="../style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
@@ -39,7 +38,8 @@
     <section id="two">
       <div class="langpick goldlink"><a href="../fr">🇫🇷</a> • <a href="../en">🇬🇧</a> • <span class="used">🇹🇷</span></div>
       <noscript>
-      <h4 align="center"><span class="material-icons-round normalfontsize">info</span> Bazı emojiler gösterilmeyebilir. Hepsini göstermek için JavaScript etkinleştirin.</p>
+        <h4 align="center"><span class="material-icons-round normalfontsize">info</span> Bazı emojiler
+          gösterilmeyebilir. Hepsini göstermek için JavaScript etkinleştirin.</p>
       </noscript>
       <p align=center class="line-image">
         <img src="../other/Armus-line.jpg">
@@ -76,7 +76,8 @@
       </table>
       <div class="spaceline"></div>
       <h2 id="informations">📝 Bilgiler</h2>
-      <h4 align="center">Armus, tüm özel amogusları bir orduda organize etmek için arkadaşlarla oluşturulan GitHub tarafından barındırılan bir projedir.</h4>
+      <h4 align="center">Armus, tüm özel amogusları bir orduda organize etmek için arkadaşlarla oluşturulan GitHub
+        tarafından barındırılan bir projedir.</h4>
       <p align="center"><a href="https://github.com/Apix0n/Armus"><img
                src="https://img.shields.io/badge/GitHub&apos;da%20gör-ff0000?style=for-the-badge&logo=github&labelColor=f2f2f2&logoColor=000000"></a>
       </p>
@@ -98,7 +99,8 @@
       <div class="spaceline"></div>
       <h2 id="armée">🔪 Ordu</h2>
       <p align="center">Toplam üye sayısı: <b class="ref">117</b></p>
-      <p align="center"><b class="ref">Altın</b> olan isimlere tıklayarak sizi <code>⭐ Teşekkürler</code> bölümüne yönledirileceksiniz.</p>
+      <p align="center"><b class="ref">Altın</b> olan isimlere tıklayarak sizi <code>⭐ Teşekkürler</code> bölümüne
+        yönledirileceksiniz.</p>
       <table class="members-table" align=center>
         <thead>
           <tr>
@@ -941,11 +943,13 @@
         <li> bir sorunuz varsa, </li>
         <li> bir karakteri silmek istiyorsanız, </li>
       </ul>
-      <p>Lütfen doğru modeli seçerek <a href="https://github.com/Apix0n/Armus/issues/new/choose" target="_blank">burada</a> bir sorun oluşturun.</p>
+      <p>Lütfen doğru modeli seçerek <a href="https://github.com/Apix0n/Armus/issues/new/choose"
+           target="_blank">burada</a> bir sorun oluşturun.</p>
       <div class="spaceline"></div>
       <h2 id="personnage">🎨 Bir karakter yarat</h2>
-      <p>Hata yapmadan karakter oluşturmak, gerekli dosyalara indirlemek ve Armus'a göndermek için aşağıdaki bağlantı tıklayarak
-      rehberi açabilirsiniz.</p>
+      <p>Hata yapmadan karakter oluşturmak, gerekli dosyalara indirlemek ve Armus'a göndermek için aşağıdaki bağlantı
+        tıklayarak
+        rehberi açabilirsiniz.</p>
       <p align="center"><a href="../en/personnage.html">Rehber: bir karakter nasıl oluşturulur?</a> (İngilizce)</p>
       <div class="spaceline"></div>
       <h2 id="remerciements">🌟 Teșekkürler</h2>
@@ -989,7 +993,7 @@
         <li><b>K.Y</b> <code>theamosus78</code> için,</li>
         <li><b>ID_CLAS</b> <code>arabus</code> için,</li>
         <li><b>ceriban176</b> <code>roitus</code> için,</li>
-        <li><b class="ref">👑 Nissou</b> 
+        <li><b class="ref">👑 Nissou</b>
           <code>abatus <a href=https://github.com/Apix0n/Armus/issues/17 target="_blank">#17</a></code>,
           <code>angelus <a href=https://github.com/Apix0n/Armus/issues/24 target="_blank">#24</a></code>,
           <code>bitmojus <a href=https://github.com/Apix0n/Armus/issues/28 target="_blank">#28</a></code>,
