Quick fix TR character.html link

--- a/tr/index.html
+++ b/tr/index.html
@@ -983,7 +983,7 @@
       <div id="character">
         <h2>🎨 Bir karakter yarat</h2>
         <p>Hata yapmadan karakter oluşturmak, gerekli dosyalara indirlemek ve Armus'a göndermek için aşağıdaki düğme tıklayarak rehberi açabilirsiniz.</p>
-        <a href="character.html" class="nounderline">
+        <a href="../en/character.html" class="nounderline">
           <div class="styled-btn text-btn red-btn">
             <div>Rehber: bir karakter nasıl oluşturulur ? (İngilizce)</div>
           </div>
