Fixed spelling errors

--- a/tr/index.html
+++ b/tr/index.html
@@ -1033,7 +1033,7 @@
           <li>Simgeler: <a href="https://fonts.google.com/icons">Material Icons</a></li>
           <li>Marka simgeleri: <a href="https://simpleicons.org">Simple Icons</a></li>
           <li>Emojiler: <a href="https://twemoji.twitter.com/">Twemoji</a></li>
-          <li>Barındırlama: <a href="https://pages.github.com/">Github Pages</a></li>
+          <li>Barındırlama: <a href="https://pages.github.com/">GitHub Pages</a></li>
         </ul>
       </div>
     </section>
@@ -1049,7 +1049,7 @@
     <!-- Rickroll -->
     <div class="rick">
       <span class="material-icons-round closerick" onclick="closerick()">close</span>
-      <video id="rickroll" src="../other/rickroll.mp4" preload="metadata" style="pointer-events: none; display: block;" playsinline>Can't even rickroll you...</video>
+      <video id="rickroll" src="../other/rickroll.mp4" preload="metadata" style="pointer-events: none; display: block;" playsinline>Seni rickroll bile yapamam...</video>
     </div>
   </body>
 
