--- a/en/index.html
+++ b/en/index.html
@@ -1033,7 +1033,7 @@
           <li>Icons: <a href="https://fonts.google.com/icons">Material Icons</a></li>
           <li>Brand icons: <a href="https://simpleicons.org">Simple Icons</a></li>
           <li>Emojis: <a href="https://twemoji.twitter.com/">Twemoji</a></li>
-          <li>Hosting: <a href="https://pages.github.com/">Github Pages</a></li>
+          <li>Hosting: <a href="https://pages.github.com/">GitHub Pages</a></li>
         </ul>
       </div>
     </section>
