--- a/fr/index.html
+++ b/fr/index.html
@@ -1032,7 +1032,7 @@
           <li>Icônes: <a href="https://fonts.google.com/icons">Material Icons</a></li>
           <li>Icônes de marque: <a href="https://simpleicons.org">Simple Icons</a></li>
           <li>Emojis: <a href="https://twemoji.twitter.com/">Twemoji</a></li>
-          <li>Hébergement: <a href="https://pages.github.com/">Github Pages</a></li>
+          <li>Hébergement: <a href="https://pages.github.com/">GitHub Pages</a></li>
         </ul>
       </div>
     </section>
@@ -1048,7 +1048,7 @@
     <!-- Rickroll -->
     <div class="rick">
       <span class="material-icons-round closerick" onclick="closerick()">close</span>
-      <video id="rickroll" src="../other/rickroll.mp4" preload="metadata" style="pointer-events: none; display: block;" playsinline>Can't even rickroll you...</video>
+      <video id="rickroll" src="../other/rickroll.mp4" preload="metadata" style="pointer-events: none; display: block;" playsinline>Je ne peux même pas te rickroller...</video>
     </div>
   </body>
 
